--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "11ty-sass-skeleton",
-  "version": "1.3.0",
-  "description": "Featuring absolutely nothing beyond a base HTML5 template and the essential setup to watch and compile your Sass alongside 11ty.",
+  "name": "rjw-template",
+  "version": "1.0.0",
+  "description": "Basic starter site",
   "main": "index.html",
   "scripts": {
     "watch:sass": "sass  --no-source-map --watch src/sass:public/css",
@@ -14,9 +14,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/5t3ph/11ty-sass-skeleton.git"
+    "url": "git+https://github.com/robjwood/rjw-template.git"
   },
-  "author": "5t3ph",
+  "author": "Rob",
   "license": "ISC",
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
