--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Basic starter site",
   "main": "index.html",
   "scripts": {
-    "watch:sass": "sass  --no-source-map --watch src/scss:public/css",
+    "watch:sass": "sass  --no-source-map --watch src/css:public/css",
     "watch:eleventy": "eleventy --serve",
-    "build:sass": "sass  --no-source-map src/scss:public/css",
+    "build:sass": "sass  --no-source-map src/css:public/css",
     "build:eleventy": "eleventy",
     "postbuild": "postcss public/css/*.css -u autoprefixer cssnano -r --no-map",
     "start": "npm-run-all build:sass --parallel watch:*",
@@ -21,6 +21,7 @@
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
     "autoprefixer": "^10.4.0",
+    "clean-css": "^5.3.1",
     "cross-env": "^7.0.3",
     "cssnano": "^5.0.10",
     "npm-run-all": "^4.1.5",
