--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,6 @@
 # dependencies installed by npm
 node_modules
 
-# build artifacts
-public
-
-# secrets and errors
-.env
-.log
-
-# macOS related files
-.DS_Store
+# build artefacts
+/public
 
